test_suite5/ALAN/test_suite/alan-2022-examples/failing/006690_mutation.alan
source Nr begin leave put DA end
